Update production with admin routes for users (#8)
* add (new admin routes & admin check middlware) created routes for administration users, also has done a new middleware

* small refactor (project)remove git cache of tracking the env file and unnessasary file

* .

* refactor & update (swagger infromation) update with new admin routes, refactor & formatted swagger desc
