# main.go
@@ -7,6 +7,7 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 
 	"github.com/trusthemind/go-cars-app/controllers"
+	admin_controllers "github.com/trusthemind/go-cars-app/controllers/admin"
 	_ "github.com/trusthemind/go-cars-app/docs"
 	"github.com/trusthemind/go-cars-app/initializers"
 	"github.com/trusthemind/go-cars-app/middleware"
@@ -91,6 +92,15 @@ func main() {
 		payment_intent.POST("/create", middleware.RequireAuth, controllers.CreatePaymentIntent)
 		payment_intent.POST("/cancel", middleware.RequireAuth, controllers.CanceledPaymentIntent)
 	}
+
+	admin := router.Group("/admin")
+	{
+		admin.GET("/users", middleware.RequireAdmin, middleware.RequireAuth, admin_controllers.GetAllUsers)
+		admin.PUT("/users/update/:id", middleware.RequireAdmin, middleware.RequireAuth, admin_controllers.UpdateUserByID)
+		admin.POST("/new-user", middleware.RequireAdmin, middleware.RequireAuth, admin_controllers.CreateNewUser)
+		admin.DELETE("/delete/:id", middleware.RequireAdmin, middleware.RequireAuth, admin_controllers.DeleteUserbyID)
+	}
+
 	// !TEST
 	router.POST("/auth/validate", middleware.RequireAuth, controllers.Validate)
 	router.POST("/vincode/check", controllers.CheckVin)
